Add solutions for 2.2 and 2.4

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 .ipynb_checkpoints/
+.ipynb_checkpoints/*
+*/.ipynb_checkpoints/
+*/.ipynb_checkpoints/*
+ix-lab2/notebooks/.ipynb_checkpoints/
+ix-lab2/notebooks/.ipynb_checkpoints/*
